Cleaned up launch configuration tabs to better reflect the options and do better pre launch checks
Added both in launch and dbgp the option of using a console to run a vdm model like in VDM Tools

git-svn-id: https://overture.svn.sourceforge.net/svnroot/overture/trunk@2519 2b2d4d09-c93c-414a-ad04-6e973f5c1cff